--- a/index.html
+++ b/index.html
@@ -465,10 +465,14 @@
 
   </script>
 	</br>
-	<p>Interaktivna karta dostupnosti medicinske usluge prekida trudnoće u Hrvatskoj napravljena je temeljem <a href="https://docs.google.com/spreadsheets/d/1kLLBlDwrXjv4USxDG0AH-QPPQ4D3xc2mZdJp2oVoJ2g/edit?usp=sharing" target="_blank">podataka</a> skupljenih novinarskim istraživanjem reporterke RTL televizije Danke Derifaj za emisiju „Potraga“ i slobodne novinarke Mašenjke Bačić čiji je tekst o dostupnosti medicinske usluge prekida trudnoće primio nagradu Balkanske stipendije za novinarsku izvrsnost.</p>
-	<p>Iz 27 javnih bolnica koje imaju ovlaštenje za obavljanje postupka prekida trudnoće na zahtjev pacijentice, novinarke su skupile podatke o ukupnom broju specijalista ginekologije i koliko ih ima priziv savjesti. Prema tome na karti je mapirana dostupnost ove medicinske usluge za svaku od 21 hrvatske županije.</p>
-	<p>Podaci su povezani sa <a href="https://docs.google.com/spreadsheets/d/1v2ynQyKi8-BuaD8IMAUDoB2ruMFAyVRjUi5tyKZOtj0/edit?usp=sharing" target="_blank">statistikama iz ljetopisa</a> Hrvatskog zavoda za javno zdravstvo o broju medicinski induciranih prekida trudnoće po županijama u 2017. godini.</p>
-	<p>Navedene su okvirne cijene ove medicinske usluge (iz istraživanja provedenog u proljeće 2018.) jer cijenu svaka bolnica kreira autonomno, a niti jedna nema objavljenu cijenu u svojim cjenicima na web stranicama.</p>
+	<p>Interaktivna karta dostupnosti medicinske usluge prekida trudnoće u Hrvatskoj nastala je kao proizvod vikend datathona u sklopu konferencije <a href="https://odd.codeforcroatia.org/" target="_blank">Dani otvorenih podataka / Open Data Day 2019.</a>, a na njoj je radio ženski tim ekspertne skupine <a href="https://codeforcroatia.org/" target="_blank">Code for Croatia</a> vođen Zojom Bajbutović. Napravljena je temeljem podataka skupljenih novinarskim istraživanjem reporterke <a href="https://hr.wikipedia.org/wiki/RTL_Televizija"  target="_blank">RTL televizije</a> Danke Derifaj za emisiju „Potraga“ i slobodne novinarke Mašenjke Bačić čiji je tekst o dostupnosti medicinske usluge prekida trudnoće primio nagradu Balkanske stipendije za novinarsku izvrsnost.
+	</p>
+	<p>Od 27 javnih bolnica koje imaju ovlaštenje za obavljanje postupka prekida trudnoće na zahtjev pacijentice, novinarke su skupile podatke o ukupnom broju specijalista ginekologije i koliko ih ima priziv savjesti. Prema tome na karti je mapirana dostupnost ove medicinske usluge za svaku od 21 hrvatske županije.</p>
+	<p>Podaci su povezani sa <a href="https://docs.google.com/spreadsheets/d/1v2ynQyKi8-BuaD8IMAUDoB2ruMFAyVRjUi5tyKZOtj0/edit#gid=0" target="_blank">statistikama iz ljetopisa</a> Hrvatskog zavoda za javno zdravstvo o broju medicinski induciranih prekida trudnoće po županijama u 2017. godini.</p>
+	<p>Navedene su okvirne cijene ove medicinske usluge (iz istraživanja provedenog u proljeće 2018.), jer cijenu svaka bolnica kreira autonomno, a niti jedna nema objavljenu cijenu u svojim cjenicima na web stranicama.
+	</p></br></br>
+	<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons licenca" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><span style="padding-left:10px;font-size:12px;">Ovo djelo čiji je autor <a xmlns:cc="http://creativecommons.org/ns#" href="https://codeforcroatia.org/" property="cc:attributionName" rel="cc:attributionURL">Code for Croatia</a>, ustupljeno je pod licencom <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Imenovanje-Dijeli pod istim uvjetima 4.0 međunarodna</a></span>
+	
 	</div>
 	</br>
 </body>
